--- a/index.html
+++ b/index.html
@@ -1,22 +1,18 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>ADV - C81: OLYMPIC SYMBOL</title>
-    <script src="main.js"></script>
-<link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+<head>
+	<title>Project C81</title>
+<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body class="body_backgorund">
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<center>
+	<h1 >Olympic Symbol</h1>
+	<canvas id="myCanvas" width="800" height="600" >
+	</canvas>
+</center>
 
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+	<script src="main.js"></script>
 
-  </head>
-  <body class="body_background">
-    
-    <center>
-      <h1>Olympic Symbol</h1>
-      <canvas id="myCanvas" width="800" height="600">
-      </canvas>
-    </center>
-    
-  </body>
+</body>
 </html>
